[metadata]
name = rocketbot
version = attr: rocketbot.__version__
author = Stefan Möhrle
author_email = stefan@corewire.de
description = A RocketChat bot-framework with a DDP- and a Rest-Client
long_description = file: README.md
url = https://github.com/corewire/rocketbot
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Application Frameworks
    License :: OSI Approved :: MIT License
keywords =
    rocketchat
    ddp-client
    restclient
    bot-framework

[options]
packages = find:
python_requires = >=3.7
install_requires =
    aiohttp>=3.5.4
    aioify>=0.3.1
    ddp_asyncio>=0.3.0
    petname>=2.2
    raven>=6.10.0
    requests==2.20.0
    rocketchat_API>=0.6.31
    tzlocal>=1.5.1
    pytz>=2019.2
include_package_data = True

[options.package_data]
rocketbot = py.typed


[tool:pytest]
filterwarnings =
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated:DeprecationWarning
    ignore:'with \(yield from lock\)' is deprecated:DeprecationWarning

[isort]
known_standard_library = dataclasses
not_skip = __init__.py
multi_line_output = 5
skip = main.py

[flake8]
max-line-length = 120
ignore =
  W503  # line break before binary operator
per-file-ignores =
  **/__init__.py:F401

[coverage:run]
branch = True

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
no_implicit_optional = True
show_traceback = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
# False due to missing typings in library
# Returntype of ddp_asyncio.subscription is better than Any
disallow_any_unimported = False
# False due to bug: https://github.com/python/mypy/issues/5957
warn_unused_configs = False

[mypy-ejson]
ignore_missing_imports = True

[mypy-pytz.tzinfo]
ignore_missing_imports = True

[mypy-tzlocal]
ignore_missing_imports = True

[mypy-ddp_asyncio.*]
ignore_missing_imports = True

[mypy-rocketchat_API.*]
ignore_missing_imports = True

[mypy-dmsclient]
ignore_missing_imports = True

[mypy-petname]
ignore_missing_imports = True

[mypy-bot_config]
ignore_missing_imports = True

[mypy-configloader]
ignore_missing_imports = True

[mypy-setuptools]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-asynctest]
ignore_missing_imports = True

[mypy-raven]
ignore_missing_imports = True

[mypy-aioify]
ignore_missing_imports = True
